# podcast-generator-mistral-hack

./: .env.example  .gitignore  README.md  drizzle.config.ts  package.json
docs/: plan-backend.md  plan-frontend.md
mcp code/: .gitignore  COMPARISON_EXAMPLE.md  DEBUGGING.md  EMOTION_IMPROVEMENTS.md  ENHANCED_FEATURES.md  FIXES_APPLIED.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  README_ENHANCED.md  README_SIMPLE.md  README_UV.md  UPDATE_COMPLETE.md  audio_creation_demo.py  install.sh  podcast_mcp_server.py  podcast_mcp_server_enhanced.py  podcast_server_enhanced_backup.py  podcast_server_enhanced_emotions.py  podcast_server_enhanced_old.py  podcast_server_simple.py  pyproject.toml  requirements.txt  requirements_simple.txt  setup_enhanced.sh  setup_simple.sh  tax_strategy_podcast_script.json  test_emotions.py  test_enhanced.py  test_enhanced_features.py  test_fixes.py  test_script_generation.py  test_server.py
mcp code/examples/: claude_desktop_config.json  client_example.py  simple_podcast.py
src/: env.js
src/app/: layout.tsx  page.tsx
src/app/characters/: page.tsx
src/app/podcasts/: page.tsx
src/app/test-apis/: page.tsx
src/components/: footer.tsx  logo.tsx  nav.tsx
src/components/ui/: button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  select.tsx  tabs.tsx
src/lib/: constants.ts  elevenlabs.ts  mistral.ts
src/server/api/: root.ts
src/server/db/: schema.ts
src/server/pipeline/: audio-combiner.ts  audio-generator.ts  epub-parser.ts  podcast-workflow.ts  script-generator.ts  (+2 more)
src/styles/: globals.css
(+11 files in other folders)
