[project]
name = "podcast-generator-mcp"
version = "1.0.0"
description = "MCP server for generating podcast scripts and audio"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "elevenlabs>=1.0.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
